# evrm

./: README.rst  pyproject.toml  requires.txt  setup.py
dev/: clean  do  env  rtfd  upenv
docs/: LICENSE.rst  about.rst  conf.py  index.rst  manual.rst  notworking.rst  realtweedekamer.rst  requirements.txt  source.rst
docs/txt/: contact.rst  fact.rst  greffe.rst  index.rst  mishandeling.rst  notworking.rst  recht.rst  schadelijk.rst  symptomen.rst  vervolgen.rst  verzoek.rst  wvggz.rst
evrm/: __init__.py  __main__.py  ver.py
evrm/modules/: __init__.py
op/: clt.py  fnd.py  obj.py  tbl.py
